--- a/frontend/styles/page.module.css
+++ b/frontend/styles/page.module.css
@@ -134,7 +134,83 @@
 }
 
 .input_invalid{
+    border:1px solid #f00 !important;
     border-color: #f00;
     outline: #f00;
 }
 
+
+
+
+.login_form_container{
+    margin: 50px auto;
+    position:relative;
+    width: 400px;
+    border: 1px solid #1a1a1a50;
+    border-radius: 10px;
+    padding: 40px 30px;
+}
+
+.input_container{
+    width:100%;
+    margin: 15px 0;
+}
+
+.input_container input{
+    width: 100%;
+    border:none;
+    border-radius: 5px;
+    outline: none;
+    background-color: var(--background-secondary);
+    padding: 12px 15px;
+    font-size: 1em;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+}
+
+.input_container label{
+
+}
+
+.input_checkbox{
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+}
+.input_checkbox input{
+    width: 30px;
+}
+
+.submit_container{
+    width: 100%;
+}
+.submit_container button{
+    width: 100%;
+    font-size: 1em;
+    font-weight: 600;
+    padding: 12px 15px;
+    border:none;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: var(--accent-color-primary);
+    margin: 5px 0 7px;
+}
+
+.submit_container button:hover{
+    filter: brightness(0.95);
+}
+
+.login_form_heading{
+    font-size: 1.3em;
+    text-align: center;
+    margin-bottom: 25px;
+}
+
+.link_alt{
+    color: var(--accent-color-primary);
+}
+
+.link_alt:hover{
+    text-decoration:solid var(--accent-color-primary);
+}
