Started new auction form

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -8,8 +8,8 @@
   --background-primary: #fafafa;
   --background-secondary: #eaeaea;
   --foreground-color: #1a1a1a;
-  --accent-color-primary: #4ad493;
-  --accent-color-secondary: #3db07a;
+  --accent-color-primary: #19A7CE;
+  --accent-color-secondary: #146C94;
 
 
 }
