--- a/frontend/styles/page.module.css
+++ b/frontend/styles/page.module.css
@@ -146,6 +146,7 @@
     margin: 50px auto;
     position:relative;
     width: 400px;
+    
     border: 1px solid #1a1a1a50;
     border-radius: 10px;
     padding: 40px 30px;
@@ -193,6 +194,7 @@
     border:none;
     border-radius: 5px;
     cursor: pointer;
+    color: var(--background-primary);
     background-color: var(--accent-color-primary);
     margin: 5px 0 7px;
 }
