--- a/frontend/styles/page.module.css
+++ b/frontend/styles/page.module.css
@@ -217,15 +217,13 @@
     text-decoration:solid var(--accent-color-primary);
 }
 
-
-.input_select{
+.input_group{
     width: 100%;
-    border:none;
-    border-radius: 5px;
-    outline: none;
-    background-color: var(--background-secondary);
-    padding: 12px 15px;
-    font-size: 1em;
-    font-weight: 600;
-    letter-spacing: 0.5px;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
+.input_group .input_container{
+    width: 50%;
 }
